--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.1",
     "moment": "^2.27.0",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^5.2.1"
   },
   "scripts": {
